{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 184,
  "lineage": "fcf2cb99-31a7-3eab-e612-1904638ede3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0693c6ef081356e25",
            "arn": "arn:aws:ec2:us-east-1:869935062949:elastic-ip/eipalloc-0693c6ef081356e25",
            "association_id": "eipassoc-0084a98a7f903a4e4",
            "domain": "vpc",
            "id": "eipalloc-0693c6ef081356e25",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0de5eae467ea535b3",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-52-70-209-131.compute-1.amazonaws.com",
            "public_ip": "52.70.209.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:869935062949:instance/i-03fe0ad8b4f89b178",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wiz-exercise-mongodb-vm-profile",
            "id": "i-03fe0ad8b4f89b178",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "wiz-exercise-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01633dc06fe07c04f",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-3-86-248-23.compute-1.amazonaws.com",
            "public_ip": "3.86.248.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f740e3486d1ad9b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfc91da86d27814a",
            "tags": {
              "Name": "wiz-exercise-mongodb-server"
            },
            "tags_all": {
              "Name": "wiz-exercise-mongodb-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050e6132c90890bbd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.mongodb_vm_profile",
            "aws_iam_role.mongodb_vm_role",
            "aws_key_pair.deployer",
            "aws_security_group.mongodb_sg",
            "aws_subnet.public_az1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:internet-gateway/igw-0f41b51453e14a39c",
            "id": "igw-0f41b51453e14a39c",
            "owner_id": "869935062949",
            "tags": {
              "Name": "wiz-exercise-igw"
            },
            "tags_all": {
              "Name": "wiz-exercise-igw"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0693c6ef081356e25",
            "association_id": "eipassoc-0084a98a7f903a4e4",
            "connectivity_type": "public",
            "id": "nat-0df92b8d1b08580cd",
            "network_interface_id": "eni-0de5eae467ea535b3",
            "private_ip": "10.0.1.213",
            "public_ip": "52.70.209.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cfc91da86d27814a",
            "tags": {
              "Name": "wiz-exercise-nat-gw"
            },
            "tags_all": {
              "Name": "wiz-exercise-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:network-acl/acl-0de707bf03dcd3388",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de707bf03dcd3388",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "869935062949",
            "subnet_ids": [
              "subnet-049afcbabf26fba2d",
              "subnet-063613e24e3d5acce",
              "subnet-08763009c34d4f364",
              "subnet-0cfc91da86d27814a"
            ],
            "tags": {
              "Name": "wiz-exercise-nacl"
            },
            "tags_all": {
              "Name": "wiz-exercise-nacl"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:route-table/rtb-0f4fc11dd5fc863e9",
            "id": "rtb-0f4fc11dd5fc863e9",
            "owner_id": "869935062949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df92b8d1b08580cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wiz-exercise-private-rt"
            },
            "tags_all": {
              "Name": "wiz-exercise-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:route-table/rtb-093137a3a9db0887d",
            "id": "rtb-093137a3a9db0887d",
            "owner_id": "869935062949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f41b51453e14a39c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wiz-exercise-public-rt"
            },
            "tags_all": {
              "Name": "wiz-exercise-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43d6848c90326f4",
            "route_table_id": "rtb-0f4fc11dd5fc863e9",
            "subnet_id": "subnet-08763009c34d4f364"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_az1",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a76ff6828f2cb157",
            "route_table_id": "rtb-0f4fc11dd5fc863e9",
            "subnet_id": "subnet-063613e24e3d5acce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_az2",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07323ad6950779f7d",
            "route_table_id": "rtb-093137a3a9db0887d",
            "subnet_id": "subnet-0cfc91da86d27814a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e01f3a3df05f30",
            "route_table_id": "rtb-093137a3a9db0887d",
            "subnet_id": "subnet-049afcbabf26fba2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:security-group/sg-050e6132c90890bbd",
            "description": "Allow SSH and MongoDB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050e6132c90890bbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "MongoDB from EKS Nodes",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "wiz-exercise-mongodb-sg",
            "name_prefix": "",
            "owner_id": "869935062949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wiz-exercise-mongodb-sg"
            },
            "tags_all": {
              "Name": "wiz-exercise-mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:security-group/sg-00b1d2a0e1faf9262",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b1d2a0e1faf9262",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS nodes to access endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-070a400353e0504bc"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wiz-exercise-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "869935062949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wiz-exercise-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "wiz-exercise-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_s3_bucket.db_backups",
            "aws_s3_bucket_policy.db_backups_policy",
            "aws_s3_bucket_public_access_block.db_backups_pab",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1698400008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070a400353e0504bc",
            "security_group_rule_id": "sgr-0ef212cd1a9a4dd0e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_s3_bucket.db_backups",
            "aws_s3_bucket_policy.db_backups_policy",
            "aws_s3_bucket_public_access_block.db_backups_pab",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:subnet/subnet-08763009c34d4f364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08763009c34d4f364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935062949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiz-exercise-private-subnet-az1",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "wiz-exercise-private-subnet-az1",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:subnet/subnet-063613e24e3d5acce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063613e24e3d5acce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935062949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiz-exercise-private-subnet-az2",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "wiz-exercise-private-subnet-az2",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:subnet/subnet-0cfc91da86d27814a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfc91da86d27814a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935062949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiz-exercise-public-subnet-az1",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "wiz-exercise-public-subnet-az1",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:subnet/subnet-049afcbabf26fba2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049afcbabf26fba2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935062949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wiz-exercise-public-subnet-az2",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "wiz-exercise-public-subnet-az2",
              "kubernetes.io/cluster/wiz-exercise-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:vpc/vpc-04454a46bf7f8bf8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088c94decd4d75bda",
            "default_route_table_id": "rtb-0630a8c60dc925ab3",
            "default_security_group_id": "sg-0d7cd747f214e278c",
            "dhcp_options_id": "dopt-0db7e6f6ec2459574",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04454a46bf7f8bf8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0630a8c60dc925ab3",
            "owner_id": "869935062949",
            "tags": {
              "Name": "wiz-exercise-vpc"
            },
            "tags_all": {
              "Name": "wiz-exercise-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:vpc-endpoint/vpce-095adcbecedf49db3",
            "dns_entry": [
              {
                "dns_name": "vpce-095adcbecedf49db3-iocx0kpv.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-095adcbecedf49db3-iocx0kpv-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-095adcbecedf49db3-iocx0kpv-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10312902Z69X2TJZN0VY"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z10312843VYO7OSBS7PWU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-095adcbecedf49db3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0adb2f47d20b6b8c3",
              "eni-0b34d1cdd6010746e"
            ],
            "owner_id": "869935062949",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00b1d2a0e1faf9262"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.8",
                "subnet_id": "subnet-08763009c34d4f364"
              },
              {
                "ipv4": "10.0.4.159",
                "subnet_id": "subnet-063613e24e3d5acce"
              }
            ],
            "subnet_ids": [
              "subnet-063613e24e3d5acce",
              "subnet-08763009c34d4f364"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_s3_bucket.db_backups",
            "aws_s3_bucket_policy.db_backups_policy",
            "aws_s3_bucket_public_access_block.db_backups_pab",
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:vpc-endpoint/vpce-0fd2be4eca34ae325",
            "dns_entry": [
              {
                "dns_name": "vpce-0fd2be4eca34ae325-ccbnoq39.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fd2be4eca34ae325-ccbnoq39-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fd2be4eca34ae325-ccbnoq39-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z070197734MHGEDQSJZAW"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z070197734MHGEDQSJZAW"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06281382NO3SEHMJMB90"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06281382NO3SEHMJMB90"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fd2be4eca34ae325",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00297b19c49b4f549",
              "eni-0666277ca2a34f70b"
            ],
            "owner_id": "869935062949",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00b1d2a0e1faf9262"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.16",
                "subnet_id": "subnet-08763009c34d4f364"
              },
              {
                "ipv4": "10.0.4.145",
                "subnet_id": "subnet-063613e24e3d5acce"
              }
            ],
            "subnet_ids": [
              "subnet-063613e24e3d5acce",
              "subnet-08763009c34d4f364"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_s3_bucket.db_backups",
            "aws_s3_bucket_policy.db_backups_policy",
            "aws_s3_bucket_public_access_block.db_backups_pab",
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:vpc-endpoint/vpce-091fc581717926417",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-091fc581717926417",
            "owner_id": "869935062949",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f4fc11dd5fc863e9"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935062949:vpc-endpoint/vpce-0df1bff2a91bb9a63",
            "dns_entry": [
              {
                "dns_name": "vpce-0df1bff2a91bb9a63-iqcqq0yk.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0df1bff2a91bb9a63-iqcqq0yk-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0df1bff2a91bb9a63-iqcqq0yk-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z102949934JR5LG0DE3QV"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z07025161W9BDMPAJQTC8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0df1bff2a91bb9a63",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e136947019132c6",
              "eni-0496baa5dbb307661"
            ],
            "owner_id": "869935062949",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00b1d2a0e1faf9262"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.68",
                "subnet_id": "subnet-08763009c34d4f364"
              },
              {
                "ipv4": "10.0.4.90",
                "subnet_id": "subnet-063613e24e3d5acce"
              }
            ],
            "subnet_ids": [
              "subnet-063613e24e3d5acce",
              "subnet-08763009c34d4f364"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04454a46bf7f8bf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_s3_bucket.db_backups",
            "aws_s3_bucket_policy.db_backups_policy",
            "aws_s3_bucket_public_access_block.db_backups_pab",
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    }
  ]
}